# da378a

./: .gitignore  README.md
lab01/: .gitignore  CMakeLists.txt  hello.cpp  sum.cpp
lab01/poly/: CMakeLists.txt  coeffs.txt  poly2.cpp  poly2.h  polysolver.cpp
lab02/: CMakeLists.txt
lab02/sieve/: CMakeLists.txt  sieve.cpp
lab02/strmod/: CMakeLists.txt  strmod.cpp
lab03/: CMakeLists.txt  Person.cpp  Person.hpp  PersonExempel.txt  PersonReg.cpp  PersonReg.hpp  PersonRegTest.cpp  SimpleTest.cpp
lab04/: CMakeLists.txt  remif.cpp  sortint.cpp  sortperson.cpp
lab04/PersonReg/: Person.cpp  Person.hpp  PersonReg.cpp  PersonReg.hpp
lab05/: CMakeLists.txt  README.md  main201025.cpp  string.cpp  string.hpp  strtest.cpp
lab06/: CMakeLists.txt  README.md  ast.cpp  ast.hpp  catc.cpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
lab06/tests/: CMakeLists.txt  hello.cat  hello_extend.cat  interpretertest.cpp  lexertest.cpp  parsertest.cpp
